--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.2",
     "@reduxjs/toolkit": "^1.6.2",
-    "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/node": "^12.0.0",
@@ -49,8 +48,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
